@@ -3,6 +3,9 @@ Changelog
 
 5.3-dev - (unreleased)
 ----------------------
+* Change: switched to version 2.8 of the arcgis Dojo library in order to have
+  clustering support
+  [ichimdav #7337]
 
 5.2 - (2012-11-26)
 ------------------
